--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -31,6 +31,7 @@ jobs:
           sudo apt-get -qq install -y make pkg-config
           sudo apt-get -qq install -y libx11-dev xorg-dev libglu1-mesa libglu1-mesa-dev libgl1-mesa-glx libgl1-mesa-dev
           sudo apt-get -qq install -y libglfw3 libglfw3-dev
+          sudo apt-get -qq install -y portaudio19-dev
       - name: Get MacOS dev libraries and tools
         if: matrix.os == 'macos-latest'
         run: |
