--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -52,7 +52,7 @@ jobs:
         if: matrix.os == 'windows-latest'
         shell: msys2 {0}
         run: |
-          go build -o _release/toynes.exe cmd/toynes/main.go
+          CGO_ENABLED=1 go build -o _release/toynes.exe cmd/toynes/main.go
           cp /mingw64/bin/glfw3.dll _release/
           cp /mingw64/bin/libatomic-1.dll _release/
           cp /mingw64/bin/libgcc_s_seh-1.dll _release/
@@ -68,11 +68,16 @@ jobs:
       - name: Build Linux app
         if: matrix.os == 'ubuntu-latest'
         run: |
-          go build -o _release/toynes --ldflags '-extldflags "-static"' cmd/toynes/main.go
+          CGO_ENABLED=1 go build -o _release/toynes --ldflags '-extldflags "-static"' cmd/toynes/main.go
       - name: Build macOS app
         if: matrix.os == 'macos-latest'
         run: |
-          go build -o _release/toynes --ldflags '-extldflags "-static"' cmd/toynes/main.go
+          mkdir -p build/macosx/ToyNES.app/Contents/MacOS/
+          CGO_ENABLED=1 go build -o build/macosx/ToyNES.app/Contents/MacOS/toynes cmd/toynes/main.go
+          cp /usr/local/Cellar/portaudio/19.7.0/lib/libportaudio.2.dylib build/macosx/ToyNES.app/Contents/MacOS/
+          install_name_tool -change /usr/local/Cellar/portaudio/19.7.0/lib/libportaudio.2.dylib @executable_path/libportaudio.2.dylib build/macosx/ToyNES.app/Contents/MacOS/toynes
+          mkdir _release
+          cp -r build/macosx/ToyNES.app _release/ToyNES.app
       - name: Save built app for upload
         uses: actions/upload-artifact@v1
         with:
