--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -3,7 +3,7 @@ name: release
 on:
   push:
     tags:
-      - 'v*'
+      - "v*"
 env:
   app-name: toynes
   app-arch: x86_64
@@ -13,7 +13,7 @@ jobs:
     name: Build
     strategy:
       matrix:
-        os: [ ubuntu-latest, macos-latest, windows-latest ]
+        os: [ubuntu-latest, macos-latest, windows-latest]
     runs-on: ${{ matrix.os }}
     env:
       release-dir: _release
@@ -32,10 +32,12 @@ jobs:
           sudo apt-get -qq install -y libx11-dev xorg-dev libglu1-mesa libglu1-mesa-dev libgl1-mesa-glx libgl1-mesa-dev
           sudo apt-get -qq install -y libglfw3 libglfw3-dev
           sudo apt-get -qq install -y portaudio19-dev
+
       - name: Get MacOS dev libraries and tools
         if: matrix.os == 'macos-latest'
         run: |
           brew install pkg-config portaudio glfw
+
       - name: Get Windows dev libraries and tools
         if: matrix.os == 'windows-latest'
         uses: msys2/setup-msys2@v2
@@ -48,6 +50,22 @@ jobs:
             mingw-w64-x86_64-pkgconf
             mingw-w64-x86_64-portaudio
             mingw-w64-x86_64-glfw
+
+      - name: Build Linux app
+        if: matrix.os == 'ubuntu-latest'
+        run: |
+          CGO_ENABLED=1 go build -o _release/toynes cmd/toynes/main.go
+
+      - name: Build macOS app
+        if: matrix.os == 'macos-latest'
+        run: |
+          mkdir -p build/macosx/ToyNES.app/Contents/MacOS/
+          CGO_ENABLED=1 go build -o build/macosx/ToyNES.app/Contents/MacOS/toynes cmd/toynes/main.go
+          cp /usr/local/Cellar/portaudio/19.7.0/lib/libportaudio.2.dylib build/macosx/ToyNES.app/Contents/MacOS/
+          install_name_tool -change /usr/local/Cellar/portaudio/19.7.0/lib/libportaudio.2.dylib @executable_path/libportaudio.2.dylib build/macosx/ToyNES.app/Contents/MacOS/toynes
+          mkdir _release
+          cp -r build/macosx/ToyNES.app _release/ToyNES.app
+
       - name: Build Windows app
         if: matrix.os == 'windows-latest'
         shell: msys2 {0}
@@ -65,19 +83,7 @@ jobs:
           cp /mingw64/bin/libssp-0.dll _release/
           cp /mingw64/bin/libstdc++-6.dll _release/
           cp /mingw64/bin/libwinpthread-1.dll _release/
-      - name: Build Linux app
-        if: matrix.os == 'ubuntu-latest'
-        run: |
-          CGO_ENABLED=1 go build -o _release/toynes --ldflags '-extldflags "-static"' cmd/toynes/main.go
-      - name: Build macOS app
-        if: matrix.os == 'macos-latest'
-        run: |
-          mkdir -p build/macosx/ToyNES.app/Contents/MacOS/
-          CGO_ENABLED=1 go build -o build/macosx/ToyNES.app/Contents/MacOS/toynes cmd/toynes/main.go
-          cp /usr/local/Cellar/portaudio/19.7.0/lib/libportaudio.2.dylib build/macosx/ToyNES.app/Contents/MacOS/
-          install_name_tool -change /usr/local/Cellar/portaudio/19.7.0/lib/libportaudio.2.dylib @executable_path/libportaudio.2.dylib build/macosx/ToyNES.app/Contents/MacOS/toynes
-          mkdir _release
-          cp -r build/macosx/ToyNES.app _release/ToyNES.app
+
       - name: Save built app for upload
         uses: actions/upload-artifact@v1
         with:
@@ -89,43 +95,43 @@ jobs:
     needs: build
     runs-on: ubuntu-latest
     steps:
-    - name: Trying to find existing release
-      uses: actions/github-script@0.9.0
-      id: release_search
-      with:
-        github-token: ${{secrets.GITHUB_TOKEN}}
-        result-encoding: string
-        script: |
-          try {
-          const release = await github.repos.getReleaseByTag({
-            owner: context.repo.owner,
-            repo: context.repo.repo,
-            tag: context.ref.replace('refs/tags/', '')
-          });
-          return release.data.upload_url;
-          } catch (ignored) {}
-          return '';
-    - name: Create new release maybe?
-      id: create_release
-      if: steps.release_search.outputs.result == ''
-      uses: actions/create-release@v1
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      with:
-        tag_name: ${{ github.ref }}
-        release_name: ${{ github.ref }}
-        draft: false
-        prerelease: false
-    # pass assets upload url of existing or new release
-    # between jobs (VMs) through txt files
-    - name: Get release upload URL
-      run: |
-        echo '${{ steps.create_release.outputs.upload_url }}${{ steps.release_search.outputs.result }}' > upload_url
-    - name: Save release upload URL
-      uses: actions/upload-artifact@v1
-      with:
-        name: upload_url
-        path: ./
+      - name: Trying to find existing release
+        uses: actions/github-script@0.9.0
+        id: release_search
+        with:
+          github-token: ${{secrets.GITHUB_TOKEN}}
+          result-encoding: string
+          script: |
+            try {
+            const release = await github.repos.getReleaseByTag({
+              owner: context.repo.owner,
+              repo: context.repo.repo,
+              tag: context.ref.replace('refs/tags/', '')
+            });
+            return release.data.upload_url;
+            } catch (ignored) {}
+            return '';
+      - name: Create new release maybe?
+        id: create_release
+        if: steps.release_search.outputs.result == ''
+        uses: actions/create-release@v1
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          tag_name: ${{ github.ref }}
+          release_name: ${{ github.ref }}
+          draft: false
+          prerelease: false
+      # pass assets upload url of existing or new release
+      # between jobs (VMs) through txt files
+      - name: Get release upload URL
+        run: |
+          echo '${{ steps.create_release.outputs.upload_url }}${{ steps.release_search.outputs.result }}' > upload_url
+      - name: Save release upload URL
+        uses: actions/upload-artifact@v1
+        with:
+          name: upload_url
+          path: ./
 
   publish:
     name: Publish
@@ -135,54 +141,54 @@ jobs:
         # should be same as runner.os
         target-os: [Linux, macOS, Windows]
         include:
-        - target-os: Linux
-          compress: tar -zcf
-          archive-ext: tar.gz
-          archive-mime: tar
-        - target-os: macOS
-          compress: tar -zcf
-          archive-ext: tar.gz
-          archive-mime: tar
-        - target-os: Windows
-          compress: zip -qq -r
-          archive-ext: zip
-          archive-mime: zip
+          - target-os: Linux
+            compress: tar -zcf
+            archive-ext: tar.gz
+            archive-mime: tar
+          - target-os: macOS
+            compress: tar -zcf
+            archive-ext: tar.gz
+            archive-mime: tar
+          - target-os: Windows
+            compress: zip -qq -r
+            archive-ext: zip
+            archive-mime: zip
     runs-on: ubuntu-latest
     steps:
-    - name: Get version tag
-      id: get_version
-      run: |
-        echo ::set-output name=version::${GITHUB_REF#refs/tags/}
-    - name: Get release upload url
-      uses: actions/download-artifact@v1
-      with:
-        name: upload_url
-    - name: Read release upload url
-      id: upload_url
-      run: |
+      - name: Get version tag
+        id: get_version
+        run: |
+          echo ::set-output name=version::${GITHUB_REF#refs/tags/}
+      - name: Get release upload url
+        uses: actions/download-artifact@v1
+        with:
+          name: upload_url
+      - name: Read release upload url
+        id: upload_url
+        run: |
           value=`cat upload_url/upload_url`
           echo "::set-output name=url::$value"
-    - name: Get the build
-      uses: actions/download-artifact@v1
-      with:
-         name: ${{ matrix.target-os }}
-    - name: Compress the build
-      id: compress
-      # compress all the files without a parent dir
-      # (cd into arch dir -> make archive in its parent -> go back)
-      run: |
-        cd ./${{ matrix.target-os }}
-        archive='${{ env.app-name }}-${{ steps.get_version.outputs.version }}-${{ matrix.target-os }}-${{ env.app-arch }}'
-        compress='${{ matrix.compress }} ../${archive,,}.${{ matrix.archive-ext }} *'
-        eval $compress
-        cd ../
-        echo ::set-output name=archive_name::${archive,,}.${{ matrix.archive-ext }}
-    - name: Upload release asset
-      uses: actions/upload-release-asset@v1
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      with:
-        upload_url: ${{ steps.upload_url.outputs.url }}
-        asset_path: ./${{ steps.compress.outputs.archive_name }}
-        asset_name: ${{ steps.compress.outputs.archive_name }}
-        asset_content_type: application/${{ matrix.archive-mime }}
+      - name: Get the build
+        uses: actions/download-artifact@v1
+        with:
+          name: ${{ matrix.target-os }}
+      - name: Compress the build
+        id: compress
+        # compress all the files without a parent dir
+        # (cd into arch dir -> make archive in its parent -> go back)
+        run: |
+          cd ./${{ matrix.target-os }}
+          archive='${{ env.app-name }}-${{ steps.get_version.outputs.version }}-${{ matrix.target-os }}-${{ env.app-arch }}'
+          compress='${{ matrix.compress }} ../${archive,,}.${{ matrix.archive-ext }} *'
+          eval $compress
+          cd ../
+          echo ::set-output name=archive_name::${archive,,}.${{ matrix.archive-ext }}
+      - name: Upload release asset
+        uses: actions/upload-release-asset@v1
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          upload_url: ${{ steps.upload_url.outputs.url }}
+          asset_path: ./${{ steps.compress.outputs.archive_name }}
+          asset_name: ${{ steps.compress.outputs.archive_name }}
+          asset_content_type: application/${{ matrix.archive-mime }}
