--- a/.gitignore
+++ b/.gitignore
@@ -2,8 +2,7 @@
 # Created by https://www.toptal.com/developers/gitignore/api/go,macos,windows
 # Edit at https://www.toptal.com/developers/gitignore?templates=go,macos,windows
 
-### Go ###
-# If you prefer the allow list template instead of the deny list, see community template:
+### Go ### # If you prefer the allow list template instead of the deny list, see community template:
 # https://github.com/github/gitignore/blob/main/community/Golang/Go.AllowList.gitignore
 #
 # Binaries for programs and plugins
@@ -94,3 +93,5 @@ roms
 *.txt
 
 dist/
+
+build/macosx/ToyNES.app/Contents/MacOS/*
