--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -13,7 +13,8 @@ jobs:
     name: Build
     strategy:
       matrix:
-        os: [ubuntu-latest, macos-latest, windows-latest]
+        # os: [ubuntu-latest, macos-latest, windows-latest]
+        os: [macos-latest]
     runs-on: ${{ matrix.os }}
     env:
       release-dir: _release
@@ -140,7 +141,8 @@ jobs:
     strategy:
       matrix:
         # should be same as runner.os
-        target-os: [Linux, macOS, Windows]
+        # target-os: [Linux, macOS, Windows]
+        target-os: [macOS]
         include:
           - target-os: Linux
             compress: tar -zcfp
@@ -174,7 +176,7 @@ jobs:
         with:
           name: ${{ matrix.target-os }}
       - name: Add permission for MacOS
-        if: matrix.os == 'macos-latest'
+        if: matrix.target-os == 'macOS'
         run: |
           cd ./${{ matrix.target-os }}
           chmod +x ToyNES.app/Contents/MacOS/toynes
