--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -87,7 +87,7 @@ jobs:
           cp /mingw64/bin/libwinpthread-1.dll _release/
 
       - name: Save built app for upload
-        uses: actions/upload-artifact@v1
+        uses: actions/upload-artifact@v3
         with:
           name: ${{ runner.os }}
           path: ${{ env.release-dir }}
@@ -130,7 +130,7 @@ jobs:
         run: |
           echo '${{ steps.create_release.outputs.upload_url }}${{ steps.release_search.outputs.result }}' > upload_url
       - name: Save release upload URL
-        uses: actions/upload-artifact@v1
+        uses: actions/upload-artifact@v3
         with:
           name: upload_url
           path: ./
@@ -144,18 +144,18 @@ jobs:
         # target-os: [Linux, macOS, Windows]
         target-os: [macOS]
         include:
-          - target-os: Linux
-            compress: tar -zcfp
-            archive-ext: tar.gz
-            archive-mime: tar
+          # - target-os: Linux
+          #   compress: tar -zcfp
+          #   archive-ext: tar.gz
+          #   archive-mime: tar
           - target-os: macOS
             compress: tar -zcfp
             archive-ext: tar.gz
             archive-mime: tar
-          - target-os: Windows
-            compress: zip -qq -r
-            archive-ext: zip
-            archive-mime: zip
+          # - target-os: Windows
+          #   compress: zip -qq -r
+          #   archive-ext: zip
+          #   archive-mime: zip
     runs-on: ubuntu-latest
     steps:
       - name: Get version tag
@@ -163,7 +163,7 @@ jobs:
         run: |
           echo ::set-output name=version::${GITHUB_REF#refs/tags/}
       - name: Get release upload url
-        uses: actions/download-artifact@v1
+        uses: actions/download-artifact@v3
         with:
           name: upload_url
       - name: Read release upload url
@@ -172,7 +172,7 @@ jobs:
           value=`cat upload_url/upload_url`
           echo "::set-output name=url::$value"
       - name: Get the build
-        uses: actions/download-artifact@v1
+        uses: actions/download-artifact@v3
         with:
           name: ${{ matrix.target-os }}
       - name: Add permission for MacOS
