Add release GitHub Actions workflow for NSF Player

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -55,23 +55,31 @@ jobs:
         if: matrix.os == 'ubuntu-latest'
         run: |
           CGO_ENABLED=1 go build -o _release/toynes cmd/toynes/main.go
+          CGO_ENABLED=1 go build -o _release/toynes-nsf cmd/toynes-nsf/*.go
 
       - name: Build macOS app
         if: matrix.os == 'macos-latest'
         run: |
           mkdir -p build/macosx/ToyNES.app/Contents/MacOS/
+          mkdir -p build/macosx/ToyNES_NSF.app/Contents/MacOS/
           CGO_ENABLED=1 go build -o build/macosx/ToyNES.app/Contents/MacOS/toynes cmd/toynes/main.go
+          CGO_ENABLED=1 go build -o build/macosx/ToyNES_NSF.app/Contents/MacOS/toynes-nsf cmd/toynes-nsf/*.go
           cp /usr/local/opt/portaudio/lib/libportaudio.2.dylib build/macosx/ToyNES.app/Contents/MacOS/
+          cp /usr/local/opt/portaudio/lib/libportaudio.2.dylib build/macosx/ToyNES_NSF.app/Contents/MacOS/
           install_name_tool -change /usr/local/opt/portaudio/lib/libportaudio.2.dylib @executable_path/libportaudio.2.dylib build/macosx/ToyNES.app/Contents/MacOS/toynes
+          install_name_tool -change /usr/local/opt/portaudio/lib/libportaudio.2.dylib @executable_path/libportaudio.2.dylib build/macosx/ToyNES_NSF.app/Contents/MacOS/toynes-nsf
           mkdir _release
           cp -r build/macosx/ToyNES.app _release/ToyNES.app
+          cp -r build/macosx/ToyNES_NSF.app _release/ToyNES_NSF.app
           chmod +x _release/ToyNES.app/Contents/MacOS/toynes
+          chmod +x _release/ToyNES_NSF.app/Contents/MacOS/toynes-nsf
 
       - name: Build Windows app
         if: matrix.os == 'windows-latest'
         shell: msys2 {0}
         run: |
           CGO_ENABLED=1 go build -o _release/toynes.exe cmd/toynes/main.go
+          CGO_ENABLED=1 go build -o _release/toynes-nsf.exe cmd/toynes-nsf/*.go
           cp /mingw64/bin/glfw3.dll _release/
           cp /mingw64/bin/libatomic-1.dll _release/
           cp /mingw64/bin/libgcc_s_seh-1.dll _release/
