--- a/.gitignore
+++ b/.gitignore
@@ -94,7 +94,7 @@ roms
 
 dist/
 
-build/macosx/ToyNES.app/Contents/MacOS/*
-build/macosx/ToyNES_NSF.app/Contents/MacOS/*
+build/macosx/ChibiNES.app/Contents/MacOS/*
+build/macosx/ChibiNES_NSF.app/Contents/MacOS/*
 
 imgui.ini
